// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolSelectionComponent with no selected type should match snapshot 1`] = `
<div
  className="tool-selection"
>
  <Divider>
    Analysis tool
  </Divider>
  <p>
    Select the tool you would like to use for your analysis. A detailed description of the tools can be found
     
    <Component
      className="tool-selection__link"
      onClick={[Function]}
      to="/help/tools"
    >
      here
    </Component>
    .
  </p>
  <div
    className="tool-selection__select"
  >
    <div
      className="tool-selection__select-inner"
    >
      <CustomField
        name="analysisType"
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "Circular heatmap",
              "value": "circ-heatmap",
            },
            Object {
              "disabled": true,
              "text": "Condition v condition",
              "value": "condition-condition",
            },
            Object {
              "disabled": true,
              "text": "Correlation",
              "value": "correlation",
            },
            Object {
              "text": "Dot plot",
              "value": "dotplot",
            },
            Object {
              "disabled": true,
              "text": "Specificity",
              "value": "specificity",
            },
          ]
        }
        placeHolder="Analysis type..."
        type="select"
      />
    </div>
  </div>
</div>
`;

exports[`ToolSelectionComponent with selected analysis type should match snapshot 1`] = `
<div
  className="tool-selection"
>
  <Divider>
    Analysis tool
  </Divider>
  <p>
    Select the tool you would like to use for your analysis. A detailed description of the tools can be found
     
    <Component
      className="tool-selection__link"
      onClick={[Function]}
      to="/help/tools"
    >
      here
    </Component>
    .
  </p>
  <div
    className="tool-selection__select"
  >
    <div
      className="tool-selection__select-inner"
    >
      <CustomField
        name="analysisType"
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "Circular heatmap",
              "value": "circ-heatmap",
            },
            Object {
              "disabled": true,
              "text": "Condition v condition",
              "value": "condition-condition",
            },
            Object {
              "disabled": true,
              "text": "Correlation",
              "value": "correlation",
            },
            Object {
              "text": "Dot plot",
              "value": "dotplot",
            },
            Object {
              "disabled": true,
              "text": "Specificity",
              "value": "specificity",
            },
          ]
        }
        placeHolder="Analysis type..."
        type="select"
      />
    </div>
    <div
      className="tool-selection__tool-description"
    >
      <Alert
        message={
          <span>
            Quantitative information from condition-readout datasets is visualized as a dot plot. This is an ideal way of visualizing and familiarizing yourself with small to moderately sized data sets (≤ 20 conditions). See the
             
            <Unknown
              className="tool-selection__link"
              onClick={[Function]}
              to="/help/tools/dotplot"
            >
              help
            </Unknown>
             
            for more information on this tool.
          </span>
        }
        showIcon={true}
        type="info"
      />
    </div>
  </div>
</div>
`;
